JS Dialogs: Fix regressions background and overlay color
- Make sure overlay stays an overlay and not a solid opaque color
- Make sure dialogs' background is white and not gray
  - Since they appear above the content they shouldn't be darker
- Also make sure Welcome dialog is not gray

related:
6f2be29ab7df147dcdabf0a0c3b3059af952c3f5
4a5b3b6465646802c0be5403d8a6a561961c7df9
08a500e938cef836e777952ec849bcfd5926a0a4

--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -15,6 +15,7 @@
 	--color-background-dark: #e8e8e8;  /* select */
 	--color-background-darker: #c0bfbc;  /* hover */
 	--color-background-lighter: #fff; /* toolbar, dialog, disabled */
+	--color-overlay: #1c5fa814;
 
 	--color-primary: #0b87e7; /* border-color */
 	--color-primary-text: #fff; /* text color when primary-lighter is background */
