--- a/browser/css/override-vex.css
+++ b/browser/css/override-vex.css
@@ -36,7 +36,7 @@
 	/* TODO: remove specific z-index from our codebase
 	so that the following line can also be removed */
 	z-index: 2000;
-	background-color: var(--color-main-background);
+	background-color: var(--color-overlay);
 	min-height: 100%;
 	min-width: 100%;
 	position: absolute;
@@ -113,7 +113,7 @@
 .vex.vex-theme-plain .vex-content{
 	box-shadow: 0 1px 10px 1px var(--color-box-shadow);
 	border-radius: var(--border-radius-large);
-	background-color: var(--color-main-background);
+	background-color: var(--color-background-lighter);
 	outline: none;
 }
 
